# 42cursus-exam_rank_03

./: CMakeLists.txt  README.md  example_file.txt  test.sh
headers/: draw_utils.h  main.h  read_utils.h
micropaint/: diff_solution  file1  mine  test.sh
micropaint/headers/: matrix_utils.h
micropaint/srcs/: draw_utils.c  main.c  read_utils.c
minipaint/: file1  mine  operation_file  test.sh
minipaint/headers/: main.h  utils.h
minipaint/srcs/: draw_utils.c  matrix_utils.c  read_utils.c  utils.c
srcs/: draw_utils.c  read_utils.c
